--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<h1>List</h1>
+	<p>Text hello guys</p>
 	<ul>
 		<li>GIRST LIST ITEM</li>
 		<li>Admin</li>
 		<li>NEW LIST ITEM Admin</li>
 		<li>NEW LIST ITEM Admin</li>
+		<li>FEATURE 1</li>
 	</ul>
 </body>
 </html>
