--- a/index.html
+++ b/index.html
@@ -9,11 +9,7 @@
 	<h1>List</h1>
 	<p>Text hello guys</p>
 	<ul>
-		<li>GIRST LIST ITEM</li>
-		<li>Admin</li>
-		<li>NEW LIST ITEM Admin</li>
-		<li>NEW LIST ITEM Admin</li>
-		<li>FEATURE 1</li>
+		dev
 	</ul>
 </body>
 </html>
