--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 		<li>NEW LIST ITEM Admin</li>
 		<li>NEW LIST ITEM Admin</li>
 		<li>FEATURE 1</li>
+		
+		<button class="new"> aaaaaaaaa</button>
 	</ul>
 </body>
 </html>
