--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
 <body>
 	<h1>List</h1>
 	<p>Text hello guys</p>
-	<ul>
+	<ol>
 		<li>GIRST LIST ITEM</li>
 		<li>Admin</li>
 		<li>NEW LIST ITEM Admin</li>
+		
+		<li>NEW LIST ITEM Admin</li>
+		<li>NEW LIST ITEM Admin</li>
 		<li>NEW LIST ITEM Admin</li>
 		<li>FEATURE 1</li>
-	</ul>
+	</ol>
 </body>
 </html>
