--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<li>NEW LIST ITEM Admin</li>
 		<li>NEW LIST ITEM Admin</li>
 		<li>FEATURE 1</li>
+		<li>FEATURE 1</li>
+		<li>FEATURE 1</li>
+		<li>FEATURE 1</li>
 	</ul>
 </body>
 </html>
